# cookiecutter-bord4-analysis

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.sh  pre_gen_project.py
util/: add_logo.py  logo.txt
{{ cookiecutter.project_slug }}/: .editorconfig  .gitignore  Makefile  README.md  deploy-reports.sh  env  mkdocs.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/report/: eda  index.md  publish
{{ cookiecutter.project_slug }}/report/css/: extra.css
{{ cookiecutter.project_slug }}/src/scripts/: download_templates.py  populate_mkdocs.py
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  Pipfile  README.md  deploy-reports.sh  env  mkdocs.yaml
{{ cookiecutter.repo_name }}/eda/: Research.ipynb  labnotes.md
{{ cookiecutter.repo_name }}/etl/: 01-Prep Data.ipynb  ssb.py
{{ cookiecutter.repo_name }}/publish/: 02-Article.ipynb
{{ cookiecutter.repo_name }}/report/: index.md
{{ cookiecutter.repo_name }}/src/scripts/: download_extra.py  download_nvdb.py  download_scripts.py  download_templates.py  populate_mkdocs.py
